--- a/Projeto-main/cadastre-se.html
+++ b/Projeto-main/cadastre-se.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,7 +18,7 @@
         </p>
         <h3> Cadastro <h3>
 		
-            <form method="post" id="contato" action="obrigado.html">
+            <form method="post" id="contato" action="grata.html">
                 <p>
                     <label for="nome">Nome Completo:</label>
                     <input type="text"
