--- a/Projeto-main/login.html
+++ b/Projeto-main/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,7 +16,7 @@
      <p>
         <img src="perfil.png" alt="Perfil" width="auto" height="auto">
     </p>
-    <form method="post" id="contato" action="obrigado.html">
+    <form method="post" id="contato" action="grata.html">
         <p>
             <label for="nome">Nome de Usuário ou Email:</label>
             <input type="text"
