--- a/Projeto-main/cadastre-se.html
+++ b/Projeto-main/cadastre-se.html
@@ -12,13 +12,13 @@
 </head>
 <body>
     <header class="topo">
-        <h1>Cadastro</h1>
+        <h1>Game Storm</h1>
         <p>
-            <img src="perfil.png" alt="Perfil" width="auto" height="auto">
+            <img src="img/perfil.png" alt="Perfil" width="80" height="70">
         </p>
         <h3> Cadastro <h3>
 		
-            <form method="post" id="contato" action="grata.html">
+            <form method="post" action="grata.html">
                 <p>
                     <label for="nome">Nome Completo:</label>
                     <input type="text"
@@ -26,7 +26,7 @@
                            id="nome"
                            placeholder="Digite seu Nome Completo sem abreviações"
                            required>
-                           <form method="post" id="contato" action="obrigado.html">
+                           <form method="post" action="grata.html">
                     <p>
                         <label for="date">Data de Nascimento:</label>
                         <input type="date"
@@ -34,7 +34,7 @@
                                id="date"
                                placeholder="Digite a Data do seu Nascimento"
                                required>
-                               <form method="post" id="contato" action="obrigado.html">
+                               <form method="post" action="grata.html">
                      <p>
                          <label for="email">Email:</label>
                         <input type="email"
@@ -50,7 +50,7 @@
                                id="nome"
                                placeholder="Crie um Nome para o seu Usuário"
                                required>
-                               <form method="post" id="contato" action="obrigado.html">
+                               <form method="post" action="grata.html">
                         <p>
                                 <p>
                 <label for="nome">Senha:</label>
