--- a/Projeto-main/contato.html
+++ b/Projeto-main/contato.html
@@ -13,5 +13,43 @@
 <body>
     <header class="topo">
         <h1>Fale Conosco</h1>
+        <hr>
+        <br>
+            <form method="post" id="contato" action="grata.html">
+                <p>
+                <label for="text">Em que Podemos Ajudar?:</label>
+                <input type="text"
+                       name="text"
+                       id="text"
+                       placeholder="Digite aqui o que deseja"
+                       required>
+                </p>
+                <p>
+                <input type="submit"
+                       value="Enviar">
+                </p>
+                <br>
+                <br>
+            </form>
+            <ul>
+        <li><a href="https://web.whatsapp.com/" target="blank"><img  src="img/equipe.png"
+            alt="Insst"
+            width="30"
+            height="30"> Nossa Equipe</a></li>
+            <br>
+                </ul>
+            <ul>
+        <li><a href="https://web.whatsapp.com/" target="blank"><img  src="img/telefone.png"
+            alt="Insst"
+            width="30"
+            height="30"> (17)99291-6331</a></li>
+            <br>
+        </ul>
+            <ul>
+        <li><a href="https://web.whatsapp.com/" target="blank"><img  src="img/email.png"
+        alt="Insst"
+        width="30"
+        height="30"> email: gamestorm.2023@gmail.com</a></li>
+            </ul>
 </body>
 </html>
