--- a/Projeto-main/login.html
+++ b/Projeto-main/login.html
@@ -14,9 +14,9 @@
     <header class="topo">
         <h1>Login</h1>
      <p>
-        <img src="perfil.png" alt="Perfil" width="auto" height="auto">
+        <img src="img/perfil.png" alt="Perfil" width="80" height="70">
     </p>
-    <form method="post" id="contato" action="grata.html">
+    <form method="post"  action="grata.html">
         <p>
             <label for="nome">Nome de Usuário ou Email:</label>
             <input type="text"
@@ -24,7 +24,7 @@
                    id="nome"
                    placeholder="Digite o Nome de Usuário ou um Email"
                    required>
-                   <form method="post" id="contato" action="obrigado.html">
+                   <form method="post" action="grata.html">
         <p>            
                     <label for="nome">Senha:</label>
                     <input type="password"
