--- a/Projeto-main/cadastre-se.html
+++ b/Projeto-main/cadastre-se.html
@@ -18,7 +18,7 @@
         </p>
         <h3> Cadastro <h3>
 		
-            <form method="post" action="grata.html">
+            <form method="get" action="grata.html">
                 <p>
                     <label for="nome">Nome Completo:</label>
                     <input type="text"
