--- a/Projeto-main/contato.html
+++ b/Projeto-main/contato.html
@@ -15,7 +15,7 @@
         <h1>Fale Conosco</h1>
         <hr>
         <br>
-            <form method="post" id="contato" action="grata.html">
+            <form method="get" id="contato" action="grata.html">
                 <p>
                 <label for="text">Em que Podemos Ajudar?:</label>
                 <input type="text"
